<resources>
    <string name="app_name">BybloSpilla</string>
    <string name="app_name2">Byblos</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Registration">Registrati</string>
    <string name="Info">Chi Siamo?</string>
    <string name="prova">Benvenuto nella app Byblos</string>
    <string name="access">Entra in Byblos</string>
    <string name="Timetab">Orario</string>
    <string name="settings">Impostazioni</string>
    <string name="calendar">Calendario</string>
    <string name="guest">Guest</string>
    <string name="admin">Admin</string>
    <string name="adminacces">Inserisci Codice Admin</string>
    <string name="instagram"><a href="https://instagram.com/aulastudiobyblos?igshid=mp7ipsmcjxz8">aulastudiobyblos</a></string>
    <string name="Code">Enter admin code</string>
    <string name="notify">Notifiche</string>
    <string name="week">Settimana Corrente</string>
    <string name="Mattime">Matt</string>
    <string name="pomtime">Pome</string>


    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>


    <string name="ret">back</string>
    <string name="no">sbagliato</string>
    <string name="si">CORRETTO! Clicca su + per inserire una nuova modifica!</string>
    <string name="add">+</string>
    <string name="save">Salva</string>
    <string name="who">WHO?</string>
    <string name="where">WHERE?</string>

    <string name="avviso">Inserire un Avviso</string>
    <string name="hintevent">Type here your note …</string>
    <string name="nex_alert">Empty</string>
    <string name="insta">FOLLOW US</string>
    <string name="timetable">Timetable</string>

    <!-- PROMO Strings -->

    <string name="credits">Promo</string>
    <string name="promo">Grazie a Byblos ottieni le seguenti promozioni presso il Bar "Caffè Mercato" (via Umberto I, 19, Spilamberto)</string>
    <string name="viewpromo">Mostra questa pagina per ottenere le promozioni</string>
    <string name="caffè">Caffé 0,90€</string>
    <string name="spritz">Spritz 4,50€</string>

    <!-- WHO_main Strings -->

    <string name="aboutus">About Us</string>
    <string name="mission">Our Mission:</string>
    <string name="studio">Study</string>
    <string name="studio1_1">Uno degli obiettivi principali della Byblos è quello di creare un ambiente adatto allo studio che possa ritenersi una valida alternativa alle biblioteche comunali ed universitarie che tendono a rimanere chiuse proprio nei periodi in prossimità delle sessioni di esami; inoltre l\'Aula Studio Byblos si impegna a garantire anche aperture serali.</string>
    <string name="silenzio">Silence</string>
    <string name="silenzio1_1">Il silenzio è una delle caratteristiche principali che ogni biblioteca o aula destinata allo studio dovrebbe in qualche modo garantire. Tuttavia, soprattutto nelle biblioteche in cui è previsto il prestito e la restituzione di libri, non è raro trovare bambini che insieme ai genitori vengono a cercare libri e di conseguenza creano confusione. L\'Aula Studio Byblos è un luogo dedicato esclusivamente allo studio, pertanto non possono capitare disagi di questo genere.</string>
    <string name="sociale">Social</string>
    <string name="sociale1_1">Nonostante il silenzio sia molto importante nel momento dello studio, è altrettanto essenziale il confronto se lo studio avviene con i propri colleghi universitari, proprio per questo motivo l\'Aula Studio Byblos offre la possibilità a chi desidera parlare a voce alta di trasferirsi in un\' aula adiacente (Aula Gialla) in cui è possibile parlare a voce alta, anche se è sempre gradita una certa discrezione.</string>

    <!-- WHO_secondary Strings -->

    <string name="founders">Founders</string>
    <string name="founders_body">L\'idea di fondare la Byblos parte da un piccolo gruppo di studenti universitari residenti a Spilamberto.\n\u2022 Nicola Borghi\n\u2022 Fabio Borelli\n\u2022 Benedetta Prandini\n\u2022 Francesco Aldo Venturelli</string>
    <string name="founders_body2">Il sindaco di Spilamberto Umberto Costantini ha dato fiducia a questo progetto permettendo a tutti gli effetti la sua realizzazione.\nOra la Byblos ha più di 20 volontari che si impegnano a garantire aperture pomeridiane e serali.</string>

    <string name="developers">Developers</string>
    <string name="developers_body">Andrea Venturelli\nDaniela Koreta</string>


    <!-- ROOM Strings -->

    <string name="aule">ROOMS</string>
    <string name="rooms">Rooms</string>
    <string name="clima">clima</string>
    <string name="wifi">wifi</string>
    <string name="presa">presa</string>
    <string name="gialla">Aula\nGialla</string>
    <string name="verde">Aula\nVerde</string>
    <string name="room_description">La Byblos mette a disposizione due Aule, per un totale di \50 posti a sedere. In entrambe le aule sono presenti delle prese elettriche ed è possibile accedere al Wi-Fi. Inoltre sia l\' Aula Verde (nonchè aula silenziosa) sia l\' Aula Gialla sono climatizzate per garantire un ambiente adeguato sia in inverno che in estate.</string>


    <string name="google_maps_key">AIzaSyB7keuvuA3rAWhy4ZRtCfXmlo1ZQbehSak</string>
    <string name="desc">Ciao! Benvenuto/a nelle nostre aule studio! queste aule sono interamente gestite da studenti come voi e garantiscono un servizio di attività con orario settimanale variabile stabilito in base alla possibilità degli studenti che le gestiscono, di poterla aprire.\n\nDaniela e Andrea sono gli sviluppatori dell\'app BYBLOS che permette ai gestori di questa aula studio di organizzare e informare tutti gli studenti interessati ad usufruire di questo servizio.</string>
    <string name="closed">closed</string>
    <string name="title_activity_maps">Map</string>
    <string name="crediti">PROMO</string>
    <string name="aule_studio">Aule Studio</string>
    <string name="notes">Notes</string>


    <!-- Login Strings -->

    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Don\'t Have An Account?</string>
    <string name="register">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Have An Account?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="type_here_a_new_note">Type here a new Note</string>

    <string name="time">WEEKLY TIMETABLE</string>
    <string name="save1">Save</string>

    <!--  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>


</resources>
