<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:id="@+id/container"
android:background="@drawable/sfondosfumato"
android:gravity="center_horizontal"
tools:context=".Page_Login">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="127dp"
    android:layout_marginTop="50dp"
    app:srcCompat="@drawable/new_logo_transparent"/>

<LinearLayout
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_rounded"
        android:drawableLeft="@drawable/icona_user_login"
        android:drawableStart="@drawable/icona_user_login"
        android:textColorHint="#9A91AC"
        android:hint="@string/username"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_rounded"
        android:drawableLeft="@drawable/icona_password_login"
        android:drawableStart="@drawable/icona_password_login"
        android:textColorHint="#9A91AC"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textSize="15sp"/>

</LinearLayout>

<Button
    android:id="@+id/button_login"
    android:layout_width="190dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/button_rounded_corners"
    android:textColor="#ffffff"
    android:text="@string/login"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:text="@string/not_registered"/>

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorFade"
        android:text="@string/register"/>
</LinearLayout>
</LinearLayout>