<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@drawable/sfondosfumato">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creditstitle"
        android:text="@string/credits"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/desccredists"
        android:layout_below="@+id/creditstitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/promo"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:fontFamily="@font/body"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/caffe"
        android:layout_centerHorizontal="true"
        app:fontFamily="@font/body"
        android:text="@string/caffè"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@+id/desccredists"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="60dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spritz"
        android:textStyle="bold"
        app:fontFamily="@font/body"
        android:text="@string/spritz"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/caffe"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descview"
        android:layout_below="@+id/spritz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:fontFamily="@font/body"
        android:text="@string/viewpromo"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        />

</RelativeLayout>