<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/sfondosfumato"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/admin"
        android:textSize="25sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/numericpw"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autoLink="none"
        android:autofillHints=""
        android:layout_gravity="center_horizontal"
        android:bufferType="editable"
        android:ems="10"
        android:hint="@string/Code"
        android:inputType="numberPassword"
        android:scrollbarThumbHorizontal="@color/colorPrimary"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:scrollbarTrackHorizontal="@color/colorPrimaryDark"
        android:scrollbarTrackVertical="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Password"
        tools:ignore="UnusedAttribute" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/Login"
        android:textColor="@android:color/white" />
</LinearLayout>