<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".page_admin">

    <EditText
        android:id="@+id/numericpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autoLink="none"
        android:bufferType="editable"
        android:ems="10"
        android:hint="@string/Code"
        android:inputType="numberPassword"
        android:scrollbarThumbHorizontal="@color/colorPrimary"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:scrollbarTrackHorizontal="@color/colorPrimaryDark"
        android:scrollbarTrackVertical="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ig"
        tools:text="@string/Password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="641dp"
        android:layout_height="384dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@android:string/ok"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent"
        tools:srcCompat="@drawable/logo_transparent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/adminacces"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/adminacces"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/pwadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Login"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numericpw" />
    <Button
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:id="@+id/retbtn"
        tools:ignore="MissingConstraints"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        android:textStyle="italic|bold"
        android:text="@string/ret"/>

</androidx.constraintlayout.widget.ConstraintLayout>