<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88322E">

    <TextView
        android:id="@+id/founders_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/title_pro"
        android:text="@string/founders"
        android:textColor="@color/colorWhite"
        android:textSize="25sp">
    </TextView>

    <TextView
        android:id="@+id/founders_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/founders_text"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/body"
        android:text="@string/founders_body"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp">

    </TextView>

    <ImageView
        android:id="@+id/founders_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/founders_body"
        android:padding="20dp"
        android:src="@drawable/founders"
        android:adjustViewBounds="true">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/founders_body2"
        android:layout_below="@id/founders_image"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/body"
        android:text="@string/founders_body2"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp">

    </TextView>


</RelativeLayout>