<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".Page_Settings">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/notify"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/settings" />
    <Button
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:id="@+id/retbtn"
        tools:ignore="MissingConstraints"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        android:textStyle="italic|bold"
        android:text="@string/ret"/>
</androidx.constraintlayout.widget.ConstraintLayout>