<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_modifyevents"
    android:background="@drawable/sfondosfumato"
    android:padding="40dp">

    <TextView
        android:id="@+id/textevents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avviso"
        android:layout_below="@+id/retbtn"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@color/colorFade"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editevents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textevents"
        android:layout_marginTop="20dp"
        android:hint="@string/hintevent"
        android:textColorHint="@color/colorFade"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        tools:ignore="TextFields"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editevents"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded_corners"
        android:textStyle="bold"
        android:text="@string/save1"
        android:textColor="@color/colorWhite"/>
    <Button
        android:id="@+id/retbtn"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableTop="@drawable/icona_back"
        android:drawableTint="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        tools:targetApi="m"/>

</RelativeLayout>