<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondosfumato"
    android:padding="10dp"
    tools:context=".Page1">

    <Button
        android:id="@+id/retbtn"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableTop="@drawable/icona_back"
        android:drawableTint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <Button
        android:id="@+id/btn_timetable"
        android:layout_above="@id/btn_events"
        android:layout_centerInParent="true"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:background="@drawable/button_rounded_corners"
        android:drawableRight="@drawable/icona_go"
        android:drawableEnd="@drawable/icona_go"
        android:drawableStart="@drawable/icona_clock"
        android:drawableLeft="@drawable/icona_clock"
        android:padding="15dp"
        android:gravity="start|center"
        android:drawablePadding="20dp"
        android:text="@string/timetable"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_events"
        android:layout_centerInParent="true"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_rounded_corners"
        android:drawableRight="@drawable/icona_go"
        android:drawableEnd="@drawable/icona_go"
        android:drawableStart="@drawable/icona_avviso"
        android:drawableLeft="@drawable/icona_avviso"
        android:padding="15dp"
        android:textSize="16sp"
        android:gravity="start|center"
        android:drawablePadding="20dp"
        android:text="@string/notes"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_timetable" />

    <Button
        android:id="@+id/btn_rooms"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_rounded_corners"
        android:drawableRight="@drawable/icona_go"
        android:drawableEnd="@drawable/icona_go"
        android:drawableStart="@drawable/icona_aula"
        android:drawableLeft="@drawable/icona_aula"
        android:padding="15dp"
        android:textSize="16sp"
        android:gravity="start|center"
        android:drawablePadding="20dp"
        android:text="@string/rooms"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/btn_events"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_events" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/crediti"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/new_logo_transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:textStyle="italic"
        android:textSize="24sp"
        android:text="@string/aule_studio"
        android:textColor="@color/colorWhite"
        />

</RelativeLayout>